--- a/src/components/MarketTicker.module.css
+++ b/src/components/MarketTicker.module.css
@@ -1,7 +1,8 @@
 .ticker {
   position: sticky;
-  top: 3.5rem;
+  top: 84px;
   z-index: 900;
+  width: 100vw;
   display: flex;
   align-items: center;
   height: 42px;
